# canon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: writing-guides.md
src/mcp_canon/: __init__.py  __main__.py  logging.py
src/mcp_canon/bundled_db/_metadata.lance/_transactions/: 0-9d83fa74-900b-460c-9a59-72c9426d4eb3.txn  0-f7dee7fa-182c-4a06-b9b0-bc05117fcefc.txn  1-2e3b2083-637b-4694-a127-1d6271db94b7.txn  1-5453d6e8-689d-4ec8-b9f1-c8d8f5d01d49.txn
src/mcp_canon/bundled_db/chunks.lance/_indices/4486cdb3-862d-4ee3-9e5d-449931e40d50/: metadata.lance  part_11_docs.lance  part_11_invert.lance  part_11_tokens.lance
src/mcp_canon/bundled_db/chunks.lance/_indices/8f88add2-aa62-4376-aaa6-13b9f4cc12bf/: metadata.lance  part_0_docs.lance  part_0_invert.lance  part_0_tokens.lance
src/mcp_canon/bundled_db/chunks.lance/_transactions/: 0-36d62aee-f5f8-4294-8279-32e6f5b89bb1.txn  0-3a1290a2-25e7-4e88-b616-da1f0fb94d34.txn  1-920416f0-debc-4aaf-affc-8aef91477536.txn  1-e672b2bb-52de-4070-be8b-000b09ab35d2.txn  2-defc2fe8-20b1-488a-9dfe-85814aa9b125.txn  2-ea466521-9c2b-4ee8-8b36-b50cc3648d20.txn
src/mcp_canon/bundled_db/guides.lance/_indices/9946a003-dc32-4a77-b191-dcd50961d4bf/: metadata.lance  part_0_docs.lance  part_0_invert.lance
src/mcp_canon/bundled_db/guides.lance/_indices/9f92ec91-d682-402e-8de7-13f396d91e9d/: metadata.lance  part_0_docs.lance  part_0_invert.lance  part_0_tokens.lance
src/mcp_canon/bundled_db/guides.lance/_transactions/: 0-3178fc2b-eca4-4ed7-8090-188bc5f5752a.txn  0-9201f959-5fd0-4399-9e07-ec1664827dcc.txn  1-4ad279be-ac51-4cfb-88d8-965b3695d20b.txn  1-de099285-7d2a-4d60-80c3-a3406435f4ac.txn  2-3d2558f5-e08d-481c-8710-adc2f48143b5.txn  2-5cab3475-d7d3-441d-9d53-312f1a1a0c08.txn
src/mcp_canon/cli/: __init__.py  main.py
src/mcp_canon/ingestion/: __init__.py  chunker.py  discovery.py  embedder.py  resolver.py  summarizer.py  validator.py  writer.py
src/mcp_canon/schemas/: __init__.py  database.py  frontmatter.py  responses.py  search.py
src/mcp_canon/server/: __init__.py  mcp.py  search.py
tests/: __init__.py  test_cli.py  test_http_endpoints.py  test_logging.py  test_preload.py  test_schemas.py  test_search_engine.py  test_search_quality.py  test_validator.py
