[project]
name = "mcp-canon"
version = "0.1.1"
description = "MCP server providing architectural patterns and best practices to LLM agents via RAG"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "tripcher" }
]
keywords = ["mcp", "llm", "rag", "architecture", "best-practices", "lancedb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]

dependencies = [
    # === CORE (minimal for inference) ===
    "mcp>=1.0.0",
    "lancedb>=0.4.0",
    "fastembed>=0.4.0",  # ONNX-based embeddings (no PyTorch)
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# === INDEXING (creating knowledge bases) ===
indexing = [
    "docling>=2.0.0",
    "langchain-text-splitters>=0.2.0",
    "httpx>=0.27.0",
]

# === HTTP SERVER (streamable-http) ===
http = [
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

# === DEVELOPMENT ===
dev = [
    "mcp-canon[indexing]",
    "mcp-canon[http]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
canon = "mcp_canon.cli.main:app"
mcp-canon = "mcp_canon.server.mcp:main"

[project.urls]
Homepage = "https://github.com/tripcher/canon"
Repository = "https://github.com/tripcher/canon"
Issues = "https://github.com/tripcher/canon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_canon"]
# Include bundled database in wheel (generated by ingestion pipeline)
artifacts = ["src/mcp_canon/bundled_db/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# === RUFF CONFIG ===
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_canon"]

# === MYPY CONFIG ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# === PYTEST CONFIG ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
